@@ -658,6 +658,35 @@ fi
 AC_MSG_RESULT([$tcl_ok])
 
 #--------------------------------------------------------------------
+#  Does the C stack grow upwards or downwards? Or cross-compiling?
+#--------------------------------------------------------------------
+
+AC_CACHE_CHECK([does the C stack grow upwards in memory?], tcl_cv_stack_grows_up, [
+    AC_TRY_RUN([
+	int StackGrowsUp(int *parent)
+	{
+	    int here;
+	    return (&here < parent);
+	}
+
+	int main (int argc, char *argv[])
+	{
+	    int foo;
+	    return StackGrowsUp(&foo);
+	}
+    ],
+    tcl_cv_stack_grows_up=yes,
+    tcl_cv_stack_grows_up=no,
+    tcl_cv_stack_grows_up=unknown)])
+if test $tcl_cv_stack_grows_up = unknown; then
+    AC_DEFINE(TCL_CROSS_COMPILE, 1,
+	[Are we cross-compiling?])
+elif test $tcl_cv_stack_grows_up = yes; then
+    AC_DEFINE(TCL_STACK_GROWS_UP, 1,
+	[The C stack grows upwards in memory])
+fi
+
+#--------------------------------------------------------------------
 #	The statements below define a collection of symbols related to
 #	building libtcl as a shared library instead of a static library.
 #--------------------------------------------------------------------
