@@ -6,6 +6,11 @@
 2007-11-10  Miguel Sofer  <msofer@users.sf.net>
 
 	* generic/tclBasic.c:
+	* unix/configure.in:
+	* unix/tclUnixInit.c: detect stack grwoth direction at compile
+	time, only fall to runtime detection when crosscompiling.
+
+	* generic/tclBasic.c:
 	* generic/tclInt.h:
 	* tests/interp.test:
 	* unix/tclUnixInit.c:
